forms-flow-documents/infra/dev/deployment_dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: form-flow-documents
  namespace: forms-flow-documents
  labels:
    app.kubernetes.io/name: forms-flow-documents
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: forms-flow-documents
  template:
    metadata:
      labels:
        app.kubernetes.io/name: forms-flow-documents
    spec:
      imagePullSecrets:
        - name: private-registry
      containers:
        - name: form-flow-web
          image: sofiamunicipalitydigitall/forms-flow-documents:latest
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "echo 'nameserver 8.8.8.8' >> /etc/resolv.conf"]
          ports:
            - containerPort: 5006
              name: http
              protocol: TCP
