forms-flow-documents/infra/dev/ingress_dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forms-flow-documents-nginx
  namespace: forms-flow-documents
  #annotations:
   # kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: "digital-dapi.digitalsofia.digital"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: forms-flow-documents-svc
            port:
              number: 5006
